Add hdf5 files and implements the slick for artist similarity